# cmake-test

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
src/app1/: CMakeLists.txt  Foo.cpp  Foo.h  main.cpp
src/app2/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  SomeClass.cpp  SomeClass.h  Unused.cpp
